add auth in header with jwt token add filter and sorting
